# VoxelProject

./: .gitignore  CMakeLists.txt
include/glad/: glad.c  glad.h
include/glfw/docs/: window.dox
include/glfw/docs/html/: window_guide.html
include/glm/: CMakeLists.txt
src/: Camera.hpp  Game.cpp  Game.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  main.cpp
src/resources/: ResourceManager.hpp  Shader.hpp  Texture.hpp
